--- a/src/app/pages/principal/principal.component.html
+++ b/src/app/pages/principal/principal.component.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ONDE!</title>
+    <link rel="icon" type="image/x-icon" href="favicon.png" />
   </head>
   <body>
     <header >
@@ -22,7 +23,8 @@
 <nav class="navbar" style="background-color: #e3f2fd; text-align: left;">
   <!-- Navbar content -->
   <div class="container-fluid" >
-    <img src="SegundoLogo.png" alt=" Logotipo">
+    
+    <img src="../../../favicon.ico" alt="">
       <a class="navbar-brand" href="principal.component.html">ONDE!</a>
       <a class="navbar-brand" href="../usuario/usuario.component.html">Inicio sesion/ Registrarse</a>
          <a class="navbar-brand" href="../desarrolladores/desarrolladores.component.html">Acerca de</a>
