--- a/src/app/pages/crud/crud.component.html
+++ b/src/app/pages/crud/crud.component.html
@@ -20,43 +20,9 @@
     <div class = "col">
         <form (ngSubmit)="guardar( f )"
         #f = "ngForm">
-            <div class="form-group">
-                <label>Firebase ID</label>
-                <input type="text"
-                    class="form-control"
-                    placeholder="Firebase ID"
-                    [(ngModel)] = "usuario.id"
-                    name = id                    
-                    disabled="disabled">
-                <small class="form-text text-muted ">Este campo es autogenerado</small>
-            </div>
-
-            <div class="col-md-4">
-                <label for="validationCustom01" class="form-label">First name</label>
-                <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
-                <div class="valid-feedback">
-                  Looks good!
-                </div>
-              </div>
-              <div class="col-md-4">
-                <label for="validationCustom02" class="form-label">Last name</label>
-                <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
-                <div class="valid-feedback">
-                  Looks good!
-                </div>
-              </div>
-              <div class="col-md-4">
-                <label for="validationCustomUsername" class="form-label">Username</label>
-                <div class="input-group has-validation">
-                  <span class="input-group-text" id="inputGroupPrepend">@</span>
-                  <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
-                  <div class="invalid-feedback">
-                    Please choose a username.
-                  </div>
-                </div>
-              </div>
             
 
+            
             <div class="form-group mt-3">
                 <label>Nombre de usuario</label>
                 <input type="text" 
@@ -98,21 +64,24 @@
                     required>                
             </div>
 
+            
+
             <div class="form-group mt-2">
-                <label>Género</label>
+                <label>Usuario</label>
+                <small class="form-text text-muted "> Selecciona el tipo de usuario que eres</small>
                 <br>
                 <button *ngIf="usuario.genero"
                         (click)="usuario.genero = false" 
                         class="btn btn-outline-light w-50" type="button">                     
                     <i class="fas fa-male"></i>
-                    Hombre
+                    Operador
                 </button>
 
                 <button *ngIf="!usuario.genero"
                     (click)="usuario.genero = true" 
                     class="btn btn-outline-light w-50" type="button">                     
                     <i class="fas fa-female"></i>
-                    Mujer
+                    Supervisor
                 </button>
             </div>
 
